--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -324,7 +324,7 @@
 														<m:ToolbarSpacer/>
 														<m:HBox>
 															<u:FileUploader buttonOnly="true" multiple="true" icon="sap-icon://attachment" id="__FILEUPLOAD" visible="true" sameFilenameAllowed="false"
-																buttonText="Add Attachment" fileType="XLS,CSV,PDF,PNG,DOCX,JPG" change="onUploadPress" filenameLengthExceed="onFileNameLengthExceed"
+																buttonText="Add Attachment" fileType="XLS,CSV,PDF,PNG,DOCX,JPG,JPEG" change="onUploadPress" filenameLengthExceed="onFileNameLengthExceed"
 																fileSizeExceed="onFileSizeExceed" maximumFileSize="2" uploadComplete="onComplete" typeMissmatch="handleMissmatch"
 																placeholder="Choose a file" style="Emphasized"/>
 														</m:HBox>
